# benchkit

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MainCLI.py  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: labeler.yml  release.yml  tests.yml
BenchKit/Data/: Datasets.py  FileSaver.py  Helpers.py
BenchKit/Miscellaneous/: BenchKit.py  Dockerfile  Dockerize.py  MakeTar.py  Settings.py  User.py  Verbose.py  bench_ascii_logo.txt  configtemplate.txt  entrypoint.txt  manage.txt
BenchKit/Miscellaneous/cli/: server.py
BenchKit/Miscellaneous/requests/: dataset.py  graph.py  model_save.py  server.py  user.py  version.py
BenchKit/Miscellaneous/utils/: tar.py
BenchKit/NeuralNetworks/: Helpers.py
BenchKit/Tracking/: Helpers.py  Tracker.py  Visualizer.py
BenchKit/Tracking/Graphers/: BaseGraph.py  TimeSeries.py
BenchKit/Train/: Helpers.py  TrainScript.txt
BenchKit/distributed/accelerate/: accelerate.py  helpers.py
BenchKit/distributed/accelerate/tracking/: bench_tracker.py
BenchKit/tracking/: config.py  helpers.py  save.py  visualizer.py
BenchKit/tracking/graphers/: time_series.py
BenchKit/tracking/graphs/: base_graph.py  time_series.py
Data/: Datasets.py  Helpers.py
Miscellaneous/: BenchKit.py  Settings.py  User.py  manage.txt
NeuralNetworks/: Modules.py
benchkit/data/: datasets.py  file_savers.py  helpers.py
benchkit/distributed/accelerate/: helpers.py
benchkit/distributed/accelerate/tracking/: bench_tracker.py
benchkit/miscellaneous/: bk_cli.py  manage.txt
benchkit/miscellaneous/cli_helpers/: server.py
benchkit/miscellaneous/requests/: dataset.py  graph.py  model_save.py  server.py  user.py  version.py
benchkit/miscellaneous/utils/: bucket.py
benchkit/tracking/: config.py  visualizer.py
benchkit/tracking/graphs/: base_graph.py  time_series.py
benchkit/train_script/: helpers.py  train_script.txt
src/benchkit/data/: __init__.py  datasets.py  file_saver.py  helpers.py
src/benchkit/distributed/accelerate/: helpers.py
src/benchkit/distributed/accelerate/tracking/: bench_tracker.py
src/benchkit/misc/: bench_ascii_logo.txt  benchkit.py  manage.txt  settings.py  verbose.py
src/benchkit/misc/cli/: server.py
src/benchkit/misc/requests/: dataset.py  graph.py  model_save.py  server.py  user.py  version.py
src/benchkit/misc/utils/: bucket.py  tar.py
src/benchkit/nn/: helpers.py
src/benchkit/tracking/: config.py  helpers.py  visualizer.py
src/benchkit/tracking/graphs/: base_graph.py  time_series.py
src/benchkit/train/: helpers.py  train_script.txt
tests/: test_create_dataset_dir.py
tests/Data/: test_filesavers.py
tests/data/: test_filesavers.py
