[tool.poetry]
name = "benchkit"
version = "1.0.0"
description = "Your End to End ML workbench."
authors = ["BenchAI"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
torch = "^2.0.1"
requests = "^2.31.0"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
accelerate = "^0.23.0"
absl-py = "^2.0.0"
certifi = "^2023.7.22"
cachetools = "^5.3.1"
charset-normalizer = "^3.2.0"
contourpy = "^1.1.1"
cycler = "^0.11.0"
filelock = "^3.12.4"
fonttools = "^4.42.1"
google-auth = "2.22.0"
google-auth-oauthlib = "1.0.0"
grpcio = "^1.58.0"
idna = "^3.4"
jinja2 = "^3.1.2"
kiwisolver = "^1.4.5"
matplotlib = "^3.8.0"
markdown = "^3.4.4"
markupsafe = "^2.1.3"
mpmath = "^1.3.0"
networkx = "^3.1"
oauthlib = "^3.2.2"
packaging = "^23.1"
pillow = "^10.0.1"
protobuf = "^4.24.3"
psutil = "^5.9.5"
pyasn1 = "^0.5.0"
pyasn1-modules = "^0.3.0"
python-dateutil = "^2.8.2"
pyparsing = "^3.1.1"
pytz = "^2023.3.post1"
pyyaml = "^6.0.1"
requests-oauthlib = "^1.3.1"
rsa = "^4.9"
six = "^1.16.0"
sympy = "^1.12"
tabulate = "^0.9.0"
tensorboard = "^2.14.0"
tensorboard-data-server = "^0.7.1"
torchaudio = "^2.0.2"
torchvision = "^0.15.2"
typing-extensions = "^4.8.0"
tzdata = "^2023.3"
urllib3 = "1.26.16"
websocket-client = "1.6.1"
werkzeug = "2.3.6"


[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
pytest = "^7.4.2"
nox-poetry = "^1.0.3"
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.9.16"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
black = "^23.9.1"
coverage = "^7.3.1"
pygments = "^2.16.1"
isort = "^5.12.0"
pre-commit = "^3.4.0"
pre-commit-hooks = "^4.4.0"
pyupgrade = "^3.12.0"
typeguard = "^4.1.5"

[tool.poetry.scripts]
benchkit = "benchkit.misc.benchkit:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
