[metadata]
name = Bench-kit
version = 0.0.40-ALPHA
author = Sriram Govindan
author_email = sales@bench-ai.com
description = BenchKit easily run pytorch on the cloud, without worrying about the cloud
long_description = file: README.md
url = https://github.com/Bench-ai/BenchKit
license = MIT
classifiers =
    Framework :: Pytorch
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >= 3.10
install_requires =
    accelerate==0.18.0
    boto3==1.24.59
    botocore==1.27.59
    certifi==2022.12.7
    charset-normalizer==2.1.1
    cmake==3.25.0
    colorama==0.4.6
    contourpy==1.0.7
    cycler==0.11.0
    docker==6.0.1
    filelock==3.9.0
    fonttools==4.39.2
    frozenlist==1.3.3
    idna==3.4
    Jinja2==3.1.2
    jmespath==1.0.1
    kiwisolver==1.4.4
    lit==15.0.7
    MarkupSafe==2.1.2
    matplotlib==3.7.1
    mpmath==1.2.1
    multidict==6.0.4
    networkx==3.0
    numpy==1.24.1
    packaging==23.0
    pandas==1.5.3
    Pillow==9.3.0
    pyparsing==3.0.9
    PyQt5==5.15.9
    PyQt5-Qt5==5.15.2
    PyQt5-sip==12.11.1
    python-dateutil==2.8.2
    pytz==2022.7.1
    requests==2.28.1
    s3transfer==0.6.0
    six==1.16.0
    sympy==1.11.1
    torch==2.0.0
    torchaudio==2.0.1
    torchdata==0.6.0
    torchvision==0.15.1
    tqdm==4.65.0
    triton==2.0.0
    typing_extensions==4.4.0
    urllib3==1.26.13
    wrapt==1.15.0
    websocket-client==1.5.1
    yarl==1.8.2
[options.entry_points]
console_scripts =
    bench-kit = BenchKit.Miscellaneous.BenchKit:main

[options.package_data]
* = *.txt, *.json, *.py, Dockerfile