[metadata]
name = Bench-kit
version = 0.0.61-ALPHA
author = Sriram Govindan
author_email = sales@bench-ai.com
description = Train your models on the cloud fast! Without ever interacting with the cloud.
long_description = file: README.md
url = https://github.com/Bench-ai/BenchKit
license = MIT
classifiers =
    Framework :: Pytorch
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >= 3.10
install_requires =
    accelerate==0.20.3
    certifi==2023.5.7
    charset-normalizer==3.1.0
    colorama==0.4.6
    docker==6.1.3
    filelock==3.12.2
    idna==3.4
    Jinja2==3.1.2
    MarkupSafe==2.1.3
    mpmath==1.3.0
    networkx==3.1
    numpy==1.25.0
    packaging==23.1
    pandas==2.0.2
    Pillow==9.5.0
    psutil==5.9.5
    python-dateutil==2.8.2
    python-dotenv==1.0.0
    pytz==2023.3
    PyYAML==6.0
    requests==2.31.0
    six==1.16.0
    sympy==1.12
    torch>=2.0.0
    tabulate==0.9.0
    torchaudio>=2.0.1
    torchvision>=0.15.1
    tqdm==4.65.0
    typing_extensions==4.6.3
    tzdata==2023.3
    urllib3==2.0.3
    websocket-client==1.6.1
[options.entry_points]
console_scripts =
    bench-kit = BenchKit.Miscellaneous.BenchKit:main

[options.package_data]
* = *.txt, *.json, *.py, Dockerfile