[metadata]
name = Bench-kit
version = 0.0.65-ALPHA
author = Sriram Govindan
author_email = sales@bench-ai.com
description = Train your models on the cloud fast! Without ever interacting with the cloud.
long_description = file: README.md
url = https://github.com/Bench-ai/BenchKit
license = MIT
classifiers =
    Framework :: Pytorch
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >= 3.10
install_requires =
    accelerate==0.20.3
    absl-py==1.4.0
    certifi==2023.5.7
    cachetools==5.3.1
    charset-normalizer==3.1.0
    colorama==0.4.6
    contourpy==1.1.0
    cycler==0.11.0
    filelock==3.12.2
    fonttools==4.42.1
    google-auth==2.22.0
    google-auth-oauthlib==1.0.0
    grpcio==1.56.0
    idna==3.4
    Jinja2==3.1.2
    kiwisolver==1.4.4
    matplotlib==3.7.2
    Markdown==3.4.3
    MarkupSafe==2.1.3
    mpmath==1.3.0
    networkx==3.1
    numpy==1.25.0
    oauthlib==3.2.2
    packaging==23.1
    pandas==2.0.2
    Pillow==9.5.0
    protobuf==4.23.4
    psutil==5.9.5
    pyasn1==0.5.0
    pyasn1-modules==0.3.0
    python-dateutil==2.8.2
    python-dotenv==1.0.0
    pyparsing==3.0.9
    pytz==2023.3
    PyYAML==6.0
    requests==2.31.0
    requests-oauthlib==1.3.1
    rsa==4.9
    six==1.16.0
    sympy==1.12
    torch>=2.0.0
    tabulate==0.9.0
    tensorboard==2.13.0
    tensorboard-data-server==0.7.1
    torchaudio>=2.0.1
    torchvision>=0.15.1
    tqdm==4.65.0
    typing_extensions==4.6.3
    tzdata==2023.3
    urllib3==1.26.16
    websocket-client==1.6.1
    Werkzeug==2.3.6
[options.entry_points]
console_scripts =
    bench-kit = BenchKit.Miscellaneous.BenchKit:main

[options.package_data]
* = *.txt, *.json, *.py, Dockerfile